# coraza

./: .env  Cargo.toml
web/api/: Cargo.toml
web/api/migration/: Cargo.toml
web/api/migration/src/: lib.rs  m20250809_000001_create_users_table.rs  m20250809_000002_create_products_table.rs  m20250809_000003_create_login_history_table.rs  m20250809_000004_create_action_logs_table.rs  m20250809_000005_create_activation_keys_table.rs  m20250809_000006_update_products_table.rs
web/api/src/: action_logs.rs  db.rs  logs.rs  main.rs
web/api/src/activation_keys/: routes.rs
web/api/src/auth/: admin_authorized.rs  authorized.rs  internal_middleware.rs  jwt.rs  middleware.rs  mod.rs  reseller_authorized.rs  routes.rs
web/api/src/internal/: routes.rs
web/api/src/models/: action_log.rs  activation_key.rs  login_history.rs  mod.rs  product.rs  user.rs
web/api/src/products/: routes.rs
web/api/src/stats/: routes.rs
web/api/src/users/: routes.rs
web/dashboard/: Cargo.toml  Dioxus.toml  spec.txt
web/dashboard/assets/: admin.css  dashboard.css  main.css  products.css
web/dashboard/src/: main.rs  models.rs
web/dashboard/src/components/: mod.rs
web/dashboard/src/components/common/: account_security_section.rs  error_card.rs  header.rs  info_tooltip.rs  mod.rs  profile_card.rs  profile_header.rs  profile_info_item.rs  profile_info_section.rs  registration_chart.rs  stat_card.rs  subscription_section.rs  success_card.rs  table_placeholder.rs
web/dashboard/src/components/modals/: add_user.rs  ban_user.rs  delete_account.rs  edit_user.rs  mod.rs
web/dashboard/src/models/: product.rs
web/dashboard/src/pages/: admin.rs  auth_callback.rs  dashboard.rs  login.rs  logs.rs  mod.rs  products.rs  profile.rs  register.rs  servers.rs  users.rs
web/dashboard/src/services/: admin_service.rs  mod.rs  stats_service.rs  user_service.rs
web/dashboard/src/state/: app_state.rs
web/dashboard/src/utils/: helpers.rs  mod.rs
web/website/: Cargo.toml  Dioxus.toml
web/website/assets/: main.css
web/website/src/: main.rs  models.rs  services.rs  utils.rs
web/website/src/components/: category_filter.rs  cookie_banner.rs  footer.rs  header.rs  hero_section.rs  loading_spinner.rs  mod.rs  product_card.rs  product_grid.rs  search_bar.rs
web/website/src/pages/: about.rs  contact.rs  home.rs  mod.rs  privacy.rs  product_detail.rs  products.rs  terms.rs
