[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.6.0"
actix-files = "0.6.0"
sea-orm = { version = "1.1.14", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
env_logger = "0.11.8"
bcrypt = "0.17.0"
reqwest = { version = "0.12.22", features = ["json"] }
chrono = "0.4.41"
actix-cors = "0.7.0"
log = "0.4"
rust_decimal = { version = "1", features = ["serde"] }
tokio-util = "0.7.0"
