[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4.41" }
sea-orm = {version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres", "cli"]
